updated suspension plotting

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ LaptimeSimulation/for_testing/
 LaptimeSimulation/PackagingLog.html
 
 LaptimeSimulation/for_redistribution/
+
+LaptimeSimulation/Setups_and_Results/
