--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ LaptimeSimulation/PackagingLog.html
 LaptimeSimulation/for_redistribution/
 
 LaptimeSimulation/Setups_and_Results/
+Setups_and_Results/
