--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@ LaptimeSimulation/for_redistribution/
 
 LaptimeSimulation/Setups_and_Results/
 Setups_and_Results/
+
+slprj/_jitprj/
+
+slprj/_sfprj/demo_cpi/_self/sfun/info/
