--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,8 @@ LaptimeSimulation/PackagingLog.html
 
 LaptimeSimulation/for_redistribution/
 
-LaptimeSimulation/Setups_and_Results/
-Setups_and_Results/
+LaptimeSimulation/Setups_and_Results/*
+Setups_and_Results/*
 
 slprj/_jitprj/
 
